force-app/main/default/objects/zak_ErrorLogEvent__e/zak_ErrorLogEvent__e.object-meta.xml
<CustomObject>
    <description>Platform event used to log exceptions, errors, warnings or any other info. User zakErrorLog log methods to publish events.</description>
    <label>zakErrorLog</label>
    <pluralLabel>zakErrorLogs</pluralLabel>
</CustomObject>