force-app/main/default/objects/zak_ErrorLogEvent__e/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Class.method#part or any other string to identify where the event was created.</description>
    <label>Source</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>