force-app/main/default/objects/zak_ErrorLogEvent__e/fields/TimeMillis__c.field-meta.xml
<CustomField>
    <fullName>TimeMillis__c</fullName>
    <description>Time of logging in milliseconds from Datetime.getTime().</description>
    <label>TimeMillis</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>