force-app/main/default/objects/zak_ErrorLogEvent__e/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <description>Either ERR, WARN, INFO, PERF, USER1, USER2, USER3.</description>
    <label>Topic</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>